# stamina

./: .gitignore  AcmeTypes.hpp~  AllStars.cpp  Automata.cpp  Automata.hpp  CMakeLists.txt  ExplicitAutomaton.cpp  ExplicitAutomaton.hpp  Expressions.cpp  Expressions.hpp  MarkovMonoid.cpp  MarkovMonoid.hpp  Matrix.cpp  Matrix.hpp  Monoid.cpp  Monoid.hpp  MultiCounterMatrix.cpp  MultiCounterMatrix.hpp  MultiMonoid.cpp  MultiMonoid.hpp  OneCounterMatrix.cpp  OneCounterMatrix.hpp  OneLeak.cpp  Output.cpp  Output.hpp  Parser.cpp  Parser.hpp  ProbMatrix.cpp  ProbMatrix.hpp  PyInterface.cpp  README.md  RegExp.cpp  RegExp.hpp  Sources.cmake  StabilisationMonoid.cpp  StabilisationMonoid.hpp  StarHeight.cpp  StarHeight.hpp  Statistics.cpp  Test  (+18 more)
CAV/: ComputeMon.tex  MonforAut.tex  benchmarks.tex  bib.bib  intro.tex  llncs.cls  main.aux  main.bbl  main.blg  main.dvi  main.ps  main.tex  starheight.tex
CAV 2016/: ComputeMon.tex  MonforAut.tex  benchmarks.tex  bib.bib  intro.tex  main.aux  main.bbl  main.ps  main.tex  starheight.tex
CAV/graph/: graph.plot  graph_zoom.plot  leakdens.plot  leakdens2.txt  lines.eps  out  ratios.plot  toRatios.awk  zoomlines.eps
Examples/: mma_1  mma_2  mma_talk  outsh1.dot  prob.txt  sh_1  sh_10  sh_2  sh_3  sh_4  sh_5  sh_6  sh_6_seg_fault  sh_7  sh_test
Old/: AcmeTypes.cpp  AcmeTypes.hpp  test.cpp
Sandbox/: CMakeLists.txt  Experiment seed 1409136702 samples 1 densities 0 plus 1 600  25 374.csv  Expressions.cpp  Expressions.hpp  MarkovMonoid.cpp  MarkovMonoid.hpp  Matrix.cpp  Matrix.hpp  Monoid.cpp  Monoid.hpp  OneCounterMatrix.cpp  OneCounterMatrix.hpp  OneLeak.cpp  ProbMatrix.cpp  ProbMatrix.hpp  Sources.cmake  StabilisationMonoid.cpp  StabilisationMonoid.hpp  Statistics.cpp  Test  Test.cpp  Test.txt  Vector.cpp  Vector.hpp
TACAS/: ComputeMon.tex  benchmarks.tex  bib.bib  intro.tex  main.aux  main.blg  main.dvi  main.tex  starheight.tex
TACAS/graph/: graph.plot  leakdens.txt  leakdens2.plot  out_medium  ratios.txt
WebDemo/: compute.php  configure.js  content.html  hugo.css  index.php
WebDemo/Examples/: mma_3  mma_4  sh_1.out.txt  sh_2.out.txt  sh_3.out.txt  sh_4.out.txt  sh_5.out.txt  sh_6  sh_6.out.txt
sage/acme-0.1/: SPKG.txt  spkg-install
sage/acme-0.1/src/: acme.py  setup.py
sage/stamina-0.1/: SPKG.txt  spkg-install
sage/stamina-0.1/src/: setup.py  stamina.py
